# CookingApp

./: .bazelrc  .gitignore  README.md  WORKSPACE  external_repos.bzl  pnpm-lock.yaml
frontend/: .env  BUILD.bazel  README.md  defs.bzl  index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  BUILD.bazel  index.tsx
frontend/src/assets/: BUILD.bazel
frontend/src/components/: ServerHomeDisplay.tsx
server/: .env  BUILD.bazel  go.mod
server/src/: BUILD.bazel  main.go
