load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//frontend:defs.bzl", "SRC_PATTERNS", "TEST_PATTERNS", "TRANSPILER")


ts_project(
    name = "src",
    srcs = glob(
        include = SRC_PATTERNS,
        exclude = TEST_PATTERNS,
    ),
    data = ["//frontend/src/assets:assets"],
    declaration = True,
    resolve_json_module = True,
    transpiler = TRANSPILER,
    tsconfig = "//frontend:tsconfig",
    visibility = ["//frontend:__subpackages__"],
    deps = [
        "//frontend:node_modules/@types/react",
        "//frontend:node_modules/react",
        "//frontend:node_modules/react-dom",
        "//frontend:node_modules/vite-plugin-svgr",
        "//frontend:node_modules/web-vitals",
    ],
)